[gd_scene load_steps=2 format=3 uid="uid://c2xqvbefmno4k"]

[ext_resource type="Script" path="res://scripts/projectiles/MagicMissile.gd" id="1_magic_missile"]

[node name="MagicMissile" type="RigidBody2D"]
script = ExtResource("1_magic_missile")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.2, 0.5, 1, 1)
scale = Vector2(0.3, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_visibility_notifier_2d_screen_exited"] 